--- a/index.html
+++ b/index.html
@@ -1,39 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <title>Admin Dashboard</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container roboto-regular">
-        <div id="sidebar">
-            <ul>
-                <li>
-                    <div id="sidebar-title">
-                        <!-- <img class="sidebar-logo" src="./logo.png" alt="logo"> -->
-                        <p>Dashboard</p>
-                    </div>
-                </li>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Profile</a></li>
-                <li><a href="#">Messages</a></li>
-                <li><a href="#">History</a></li>
-                <li><a href="#">Tasks</a></li>
-                <li><a href="#">Communities</a></li>
-            </ul>
-            <ul>
-                <li href="#"><a href="#">Settings</a></li>
-                <li href="#"><a href="#">Support</a></li>
-                <li href="#"><a href="#">Privacy</a></li>
-            </ul>
+      <div id="sidebar">
+        <ul>
+          <li>
+            <div class="sidebar-title">
+              <img class="sidebar-logo" src="./assets/icons/dashboard.png" alt="logo">
+              <p>Dashboard</p>
+            </div>
+          </li>
+          <li>
+            <div class="sidebar-link">
+              <img
+                class="sidebar-icon"
+                src="./assets/icons/home.png"
+                alt="home"
+              />
+              <p>Home</p>
+            </div>
+          </li>
+          <li>
+            <div class="sidebar-link">
+              <img
+                class="sidebar-icon"
+                src="./assets/icons/account.png"
+                alt="profile"
+              />
+              <p>Profile</p>
+            </div>
+          </li>
+          <li>
+            <div class="sidebar-link">
+                <img
+                  class="sidebar-icon"
+                  src="./assets/icons/chat.png"
+                  alt="messages"
+                />
+                <p>Messages</p>
+              </div>
+          </li>
+          <li>
+            <div class="sidebar-link">
+                <img
+                  class="sidebar-icon"
+                  src="./assets/icons/history.png"
+                  alt="history"
+                />
+                <p>History</p>
+              </div>
+          </li>
+          <li>
+            <div class="sidebar-link">
+                <img
+                  class="sidebar-icon"
+                  src="./assets/icons/task.png"
+                  alt="tasks"
+                />
+                <p>Tasks</p>
+              </div>
+          </li>
+          <li>
+            <div class="sidebar-link">
+                <img
+                  class="sidebar-icon"
+                  src="./assets/icons/groups.png    "
+                  alt="communities"
+                />
+                <p>Communities</p>
+              </div>
+          </li>
+        </ul>
+        <ul>
+          <li href="#">
+            <div class="sidebar-link">
+                <img
+                  class="sidebar-icon"
+                  src="./assets/icons/settings.png"
+                  alt="settings"
+                />
+                <p>Settings</p>
+              </div>
+          </li>
+          <li href="#">
+            <div class="sidebar-link">
+                <img
+                  class="sidebar-icon"
+                  src="./assets/icons/help.png"
+                  alt="support"
+                />
+                <p>Support</p>
+              </div>
+          </li>
+          <li href="#">
+            <div class="sidebar-link">
+                <img
+                  class="sidebar-icon"
+                  src="./assets/icons/privacy.png"
+                  alt="privacy"
+                />
+                <p>Privacy</p>
+              </div>
+          </li>
+        </ul>
+      </div>
+      <div id="header">
+        <div class="header-add-button">
+          <img class="header-icon" src="./assets/icons/add.png" alt="add">
+          <img class="header-icon" src="./assets/icons/drop_down.png" alt="drop down">
         </div>
-        <div id="header"></div>
-        <div id="main-content"></div>
+        <div class="header-searchbar-container">
+          <img class="header-icon" src="./assets/icons/search.png" alt="Search icon">
+          <input type="search" class="header-searchbar" placeholder="Search" />
+        </div>
+        <div class="header-notif-container"><img src="./assets/icons/notif.png" alt="Notifications" class="header-icon" /></div>
+        <div class="header-profile-icon-container">
+          <img src="./assets/icons/profile.png" alt="Profile" class="header-profile-icon" />
+          <img src="./assets/icons/drop_down.png" alt="drop down" class="header-icon" />
+        </div>
+      </div>
+      <div id="main-content"></div>
     </div>
-</body>
+  </body>
 </html>
