--- a/index.html
+++ b/index.html
@@ -131,7 +131,117 @@
           <img src="./assets/icons/drop_down.png" alt="drop down" class="header-icon" />
         </div>
       </div>
-      <div id="main-content"></div>
-    </div>
+     <div id="main-content">
+      <div class="project-section">
+        <p class="section-title"">Your Projects</p>
+        <div class="project-container">
+          <div class="project-card">
+            <p class="project-title">
+              New Project
+            </p>
+            <p class="project-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas optio architecto, voluptatem explicabo, nobis, molestias saepe esse modi corrupti id magnam inventore nesciunt ex? Libero minima commodi quo sed perferendis.
+            </p>
+            <div class="project-buttons">
+              <img src="./assets/icons/star.png" alt="Favorite">
+              <img src="./assets/icons/eye.png" alt="View">
+              <img src="./assets/icons/share.png" alt="Share">
+            </div>
+          </div>
+          <div class="project-card">
+            <p class="project-title">
+              New Project
+            </p>
+            <p class="project-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas optio architecto, voluptatem explicabo, nobis, molestias saepe esse modi corrupti id magnam inventore nesciunt ex? Libero minima commodi quo sed perferendis.
+            </p>
+            <div class="project-buttons">
+              <img src="./assets/icons/star.png" alt="Favorite">
+              <img src="./assets/icons/eye.png" alt="View">
+              <img src="./assets/icons/share.png" alt="Share">
+            </div>
+          </div>
+          <div class="project-card">
+            <p class="project-title">
+              New Project
+            </p>
+            <p class="project-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas optio architecto, voluptatem explicabo, nobis, molestias saepe esse modi corrupti id magnam inventore nesciunt ex? Libero minima commodi quo sed perferendis.
+            </p>
+            <div class="project-buttons">
+              <img src="./assets/icons/star.png" alt="Favorite">
+              <img src="./assets/icons/eye.png" alt="View">
+              <img src="./assets/icons/share.png" alt="Share">
+            </div>
+          </div>
+          <div class="project-card">
+            <p class="project-title">
+              New Project
+            </p>
+            <p class="project-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas optio architecto, voluptatem explicabo, nobis, molestias saepe esse modi corrupti id magnam inventore nesciunt ex? Libero minima commodi quo sed perferendis.
+            </p>
+            <div class="project-buttons">
+              <img src="./assets/icons/star.png" alt="Favorite">
+              <img src="./assets/icons/eye.png" alt="View">
+              <img src="./assets/icons/share.png" alt="Share">
+            </div>
+          </div>
+          <div class="project-card">
+            <p class="project-title">
+              New Project
+            </p>
+            <p class="project-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas optio architecto, voluptatem explicabo, nobis, molestias saepe esse modi corrupti id magnam inventore nesciunt ex? Libero minima commodi quo sed perferendis.
+            </p>
+            <div class="project-buttons">
+              <img src="./assets/icons/star.png" alt="Favorite">
+              <img src="./assets/icons/eye.png" alt="View">
+              <img src="./assets/icons/share.png" alt="Share">
+            </div>
+          </div>
+          <div class="project-card">
+            <p class="project-title">
+              New Project
+            </p>
+            <p class="project-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas optio architecto, voluptatem explicabo, nobis, molestias saepe esse modi corrupti id magnam inventore nesciunt ex? Libero minima commodi quo sed perferendis.
+            </p>
+            <div class="project-buttons">
+              <img src="./assets/icons/star.png" alt="Favorite">
+              <img src="./assets/icons/eye.png" alt="View">
+              <img src="./assets/icons/share.png" alt="Share">
+            </div>
+          </div> 
+        </div>
+      </div>
+
+      <div class="announcement-section">
+        <p class="section-title">Announcements</p>
+        <div class="announcement-container">
+          <div class="announcement-card">
+            <p class="announcement-title">New Feature</p>
+            <p class="announcement-content">We have added a new feature to the platform. Check it out now!</p>
+          </div>
+          <div class="announcement-card">
+            <p class="announcement-title">New Feature</p>
+            <p class="announcement-content">We have added a new feature to the platform. Check it out now!</p>
+          </div>
+          <div class="announcement-card">
+            <p class="announcement-title">New Feature</p>
+            <p class="announcement-content">We have added a new feature to the platform. Check it out now!</p>
+          </div>
+      </div>
+
+     </div>
+
+     <div class="trending-section">
+      <p class="section-title">Trending</p>
+      <div class="trending-container">
+        <div class="trending-card">
+          
+        </div>
+      </div>
+     </div>
   </body>
 </html>
