--- a/index.html
+++ b/index.html
@@ -239,7 +239,32 @@
       <p class="section-title">Trending</p>
       <div class="trending-container">
         <div class="trending-card">
-          
+          <img src="./assets/icons/profile.png" alt="User" class="trending-icon">
+          <div class="trending-info">
+            <p class="trending-title">@3psilon0</p>
+            <p class="trending-text">Did something great!</p>
+          </div>
+        </div>
+        <div class="trending-card">
+          <img src="./assets/icons/profile.png" alt="User" class="trending-icon">
+          <div class="trending-info">
+            <p class="trending-title">@3psilon0</p>
+            <p class="trending-text">Did something great!</p>
+          </div>
+        </div>
+        <div class="trending-card">
+          <img src="./assets/icons/profile.png" alt="User" class="trending-icon">
+          <div class="trending-info">
+            <p class="trending-title">@3psilon0</p>
+            <p class="trending-text">Did something great!</p>
+          </div>
+        </div>
+        <div class="trending-card">
+          <img src="./assets/icons/profile.png" alt="User" class="trending-icon">
+          <div class="trending-info">
+            <p class="trending-title">@3psilon0</p>
+            <p class="trending-text">Did something great!</p>
+          </div>
         </div>
       </div>
      </div>
